# life-optimizer

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
assets/: AppIcon.icns
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
macos-app/: .gitignore  Package.swift
macos-app/Resources/: config.yaml.default
scripts/: com.lifeoptimizer.daemon.plist
src/life_optimizer/: __init__.py  __main__.py  cli.py  config.py  constants.py
src/life_optimizer/collectors/: __init__.py  base.py  calendar_app.py  chrome.py  finder.py  generic.py  jxa_bridge.py  mail.py  (+6 more)
tests/test_chrome_extension/: test_api.py
tests/test_cli/: test_cli.py
tests/test_collectors/: test_calendar.py  test_chrome.py  test_finder.py  test_jxa_bridge.py  test_mail.py  test_messages.py  test_registry.py  test_safari.py  test_slack.py  test_terminal.py  test_vscode.py
tests/test_daemon/: test_idle_detection.py  test_workspace_listener.py
tests/test_dashboard/: test_api.py  test_api_extended.py  test_app.py  test_chat_api.py  test_chat_page.py  test_focus.py
tests/test_llm/: test_categorizer.py  test_claude_client.py  test_insights.py  test_ollama_client.py  test_pipeline.py  test_summarizer.py
tests/test_permissions/: test_checker.py
tests/test_query/: test_engine.py  test_entity_extractor.py  test_formatter.py  test_router.py  test_semantic_search.py  test_temporal.py  test_text_to_sql.py
tests/test_screenshots/: __init__.py  test_capture.py  test_scheduler.py
tests/test_storage/: test_compression.py  test_database.py  test_repositories.py
(+78 files in other folders)
